APPLICATIVO: - Lettura da indirizzo RAM predefinito della versione Firmware del BootLoader - Nella risposta al comando CONTROLLO PRESENZA aggiunti 3 campi finali che contengono la versione del Firmware del BootLoader - Comando JUMP TO BOOT
BOOT: versione 1.7.1
- Scrittura da indirizzo RAM predefinito della versione Firmware del BootLoader
- Comando SEND_FRMWR_VERSION

--- a/Humidifier_Boot/nbproject/Makefile-genesis.properties
+++ b/Humidifier_Boot/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Mar 02 12:20:01 CET 2018
+#Wed Apr 18 12:34:30 CEST 2018
 default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=9c07fbdde91a46270dda81e03dd9f4d4
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.33\\bin
-configurations-xml=7b15449eb26ff4ed4460979307efaee6
+configurations-xml=5d401dee94ad14dd7930daaf1e4c82e1
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5d30ff5128b14865c8a3796a8f0bb8a0
 default.languagetoolchain.version=1.33
 host.platform=windows
